--- a/ex00/Makefile
+++ b/ex00/Makefile
@@ -1,5 +1,5 @@
 NAME	= ex00
-SRC		= main.cpp
+SRC		= main.cpp Zombie.cpp newZombie.cpp randomChump.cpp
 OBJ		= $(SRC:.cpp=.o)
 CC		= c++
 FLAGS	= -Wall -Wextra -Werror -std=c++98
